gcc/testsuite/rust/rustc/ui/pattern/deny-irrefutable-let-patterns.rs
#![deny(irrefutable_let_patterns)]

fn main() {
    if let _ = 5 {} // { dg-error "" "" { target *-*-* } }

    while let _ = 5 { // { dg-error "" "" { target *-*-* } }
        break;
    }
}

